# PrivDNN

./: .gitignore  LICENSE  README.md  requirements.txt
PrivDNN/: data.py  main.py  models.py  utils.py  worker.py
analyze_result/accuracy_graph/: draw_graph.py  utils.py
analyze_result/cipher_operations/: CIFAR10.py  EMNIST.py  GTSRB.py  MNIST.py  TinyImageNet.py  draw_grapg.py  draw_graph.py
analyze_result/full_combinations/: EMNIST_1_4.npy  analyze_combination.py  analyze_ranking.py  analyze_ranking_apend.py  utils.py
analyze_result/random_selections/: random_selection.py
analyze_result/recovery_attack/: draw_CIFAR10_recovery_graph.py  draw_GTSRB_recovery_graph.py  draw_TinyImageNet_recovery_graph.py  draw_graph.py  draw_graph_CIFAR10.py  draw_graph_GTSRB.py  draw_graph_TinyImageNet.py  draw_running_time_graph.py
saved_models/CIFAR10/: recover_selected_neurons.json
seal/src/interact/: CMakeLists.txt  client.cpp  common.h  path.h  path.h.in  server.cpp  timer.cpp  timer.h  utils.cpp  utils.h
